# Kimi-CLI-X

./: AGENTS.md  README.md  README_zh.md  install.py  publish.py  pyproject.toml
.agents/skills/api/: SKILL.md
.agents/skills/serve/: SKILL.md
.agents/skills/tool/: SKILL.md
.kimix/: config.json  skill.json
docs/: anthropic.json  deepseek.json  kimix_config.json
docs/tutorials/: 1_quick_start.md  1_quick_start_en.md  2_long_task.md  2_long_task.md.bak  2_long_task_en.md  3_builtin_tools.md  3_builtin_tools_en.md  4_skills_en.md  5_server_en.md
kimi-cli/: CHANGELOG.md
kimi-cli/src/kimi_cli/: app.py  config.py  llm.py  session_state.py
kimi-cli/tests/core/: test_agent_spec.py  test_config.py  test_create_llm.py  test_default_agent.py  test_dynamic_injection_hooks.py  test_history_index.py  test_kimisoul_auto_retrieve.py  test_kimisoul_ralph_loop.py  test_kimisoul_steer.py  test_kvcache_optimizations.py  test_notifications.py  test_session.py  test_skip_afk_prompt_injection.py  test_wire_message.py
kimi-cli/tests/tools/: test_background_tools.py  test_shell_bash.py  test_tool_schemas.py
kimi-cli/tests/utils/: test_pyinstaller_utils.py
kimi-cli/tests_e2e/: test_wire_approvals_tools.py  test_wire_config.py  test_wire_prompt.py  test_wire_protocol.py  test_wire_sessions.py  test_wire_skills_mcp.py
scripts/: cpp_lint.py  py_lint.py
src/kimi_agent_sdk/: __init__.py  _prompt.py  _session.py
src/kimix/: agent_boss.json  agent_boss.yaml  agent_planner.json  agent_readonly.json  agent_recall.yaml  agent_searcher.json  agent_skill_searcher.yaml  agent_subagent.json  agent_subagent.yaml  agent_swarm.yaml  agent_worker.json  agent_worker.yaml  base.py  cot.py  retrieval.py  summarize.py
src/kimix/cli_impl/: args.py  commands.py  constants.py  core.py  init.py  utils.py
src/kimix/dag/: agent_swarm.py
src/kimix/memory/: __init__.py  cold_storage.py  embedding.py  long_term_memory.py  procedural_memory.py  programmatic_memory.py  retrieval.py  short_term_memory.py  sqlite_backend.py  system.py  tools.py  types.py  working_memory.py
src/kimix/server/: app.py  client.py  dummy_app.py  dummy_session_manager.py  session_manager.py
src/kimix/tools/: common.py
tests/: test_adaptive_preserve.py  test_async_comprehensive.py  test_bash.py  test_bash_tools.py  test_cli_line_editing.py  test_cli_sessions_command.py  test_compaction_cascade.py  test_context_retrieval.py  test_custom_config.py  test_dummy_app.py  test_file_builder.py  test_first_turn_preservation.py  test_history_index.py  test_integration_compaction.py  test_new_retrieval_integration.py  test_print_agent_json.py  test_proccess_pwsh.py  test_process_task.py  test_prompt_str.py  test_prompt_todo_reminder.py  test_result.txt  test_run_bash.py  test_server_session_history.py  test_swarm.py  test_system_prompt.py  test_system_prompt_budget.py  test_tokens.py  test_tools_async.py
tests/agent_swarm/: example_swarm.py
tests/kimix/: test_agent_conversation.py
tests/memory/: test_embedding.py  test_forget_tool.py  test_system_advanced.py  test_system_edge_cases.py  test_tools.py  test_tools_advanced.py  test_working_memory.py
(+100 files in other folders)
