[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kimix"
version = "0.1.15"
description = "Kimi Agent Tools - Custom tool collection for Kimi Agent SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy",
    "playwright",
    "markdownify",
    "kimi-cli-x>=1.44.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "opencc-python-reimplemented>=0.1.7",
]

[project.optional-dependencies]
# Office document processing
office = [
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
]

# Image processing & OCR
image_process = [
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

# All optional dependencies
all = [
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.hatch.build.targets.wheel]
packages = ["src/kimix", "src/my_tools"]
sources = ["src"]

[tool.uv]
link-mode = "symlink"

[tool.uv.workspace]
members = [
    "kimi-cli",
    "kimi-cli/packages/kosong",
    "kimi-cli/packages/kaos",
]

[tool.uv.sources]
kimi-cli-x = { workspace = true }
kosong-x = { workspace = true }
pykaos = { workspace = true }

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[project.scripts]
kimix = "kimix.cli:cli"

[tool.mypy]
# Strict mode switch
strict = true

# Or manually enable individual strict checks (when strict = false)
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Disallow implicit optional (None must be explicitly declared)
no_implicit_optional = true

# Check untyped definitions
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true

# Check Any types
disallow_any_generics = true

# Other useful options
show_error_codes = true        # Show error codes for easy # type: ignore[xxx]
ignore_missing_imports = true  # Skip when third-party libraries lack type stubs
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
